Changed site title

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <div class="container">
-            <h1>Cats Mania</h1>
+            <h1>Cat Rant A Do Hon</h1>
         </div>
     </header>
 
