changed button label

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="cover">
         <form id="search-form">
             <input id="cat-keyword" type="text" placeholder="Search a cat">
-            <button>Find a cat</button>
+            <button>Search for breeds</button>
         </form>
     </div>
 
